--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
 
 main {
-  max-width: 80vw;
-  margin: 20px;
+  width: 90vw;
+  max-width: 600px;
+  margin: auto;
 }
 
 section {
@@ -32,6 +34,7 @@ button.next {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
